tests/baselines/reference/parserSuperExpression4.errors.txt
==== tests/cases/compiler/parserSuperExpression4.ts (2 errors) ====
    class C {
        private foo() {
            super.foo = 1
            ~~~~~
!!! parserSuperExpression4.ts(3,9): error TS2103: 'super' can only be referenced in a derived class.
        }
    }
    
    module M1.M2 {
        class C {
            private foo() {
                super.foo = 1
                ~~~~~
!!! parserSuperExpression4.ts(10,13): error TS2103: 'super' can only be referenced in a derived class.
            }
        }
    }